resolves overflow, floats, box-sizing issues

--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -3,7 +3,6 @@
   font-family: Helvetica Neue, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 0.9rem;
-  overflow: hidden;
 
   .container {
     margin: 0 auto;
